syntax = "proto3";

enum Language {
  ENGLISH = 0;
  SPANISH = 1;
  FRENCH = 2;
  INDONESIAN = 3;
  PORTUGUESE = 4;
  RUSSIAN = 5;
  THAI = 6;
}

message Manga {
    uint32 manga_id = 1;
    string manga_name = 2;
    string author = 3;
    string portrait_image_url = 4;
    string landscape_image_url = 5;
    uint32 view_count = 6;
    Language language = 7;
}

message Chapter {
    uint32 manga_id = 1;
    uint32 chapter_id = 2;
    string chapter_number = 3;
    string chapter_name = 4;
    string thumbnail_url = 5;
    uint32 start_timestamp = 6;
    uint32 end_timestamp = 7;
    bool already_viewed = 8;
    bool is_vertical_only = 9;
}

message Banner {
  string imageBanner = 1;
  Sns sns = 2;
  int32 viewCount = 3;
}

message Sns {
  string body = 1;
  string url = 2;
}

message MangaDetail {
    Manga manga = 1;
    string manga_image_url = 2;
    string overview = 3;
    string background_image_url = 4;
    uint32 next_timestamp = 5;
    enum UpdateTiming {
        NOT_REGULARLY = 0;
        MONDAY = 1;
        TUESDAY = 2;
        WEDNESDAY = 3;
        THURSDAY = 4;
        FRIDAY = 5;
        SATURDAY = 6;
        SUNDAY = 7;
        DAY = 8;
    }

    UpdateTiming updateTiming = 6;
    string viewing_period_description = 7;
    string non_appearance_info = 8;

    message AllLanguage {
        uint32 titleId = 1;
        Language language = 2;
    }
    repeated AllLanguage allLanguage = 27;

    message Chapters {
        uint32 count = 1;
        repeated Chapter first_chapter_list = 2;
        repeated Chapter chapter_list = 3;
        repeated Chapter last_chapter_list = 4;
    }

    repeated Chapters chapters = 28;
}

message UpdatedManga{
    uint32 manga_id = 1;
    string manga_name = 2;
    string author = 3;
    string portrait_image_url = 4;
    string landscape_image_url = 5;
    uint32 view_count = 6;
    Language language = 7;
}

message UpdatedMangaDetail {
    UpdatedManga updated_manga = 1;
    string upload_timestamp = 2;
}

message Updated {
    repeated UpdatedMangaDetail updated_manga_detail = 1;
}

message Response {
    SuccessResult success = 1;
    ErrorResult error = 2;
}

message ErrorResult {
    enum Action {
        DEFAULT = 0;
        UNAUTHORIZED = 1;
        MAINTENANCE = 2;
        GEOIP_BLOCKING = 3;
    }
    Action action = 1;
    string debugInfo = 4;
}

message SuccessResult {
    MangaDetail manga_detail = 8;
    Updated updated = 20;
}
